--- a/colorGame.css
+++ b/colorGame.css
@@ -1,9 +1,18 @@
 body {
   background-color: #232323;
+  margin: 0;
+  font-family: "Avenir";
 }
 
 h1 {
   color: white;
+  line-height: 1.1;
+  font-weight: normal;
+  text-align: center;
+  background: steelblue;
+  margin: 0;
+  text-transform: uppercase;
+  padding: 20px 0;
 }
 
 .square {
@@ -12,13 +21,24 @@ h1 {
   padding-bottom: 30%;
   float: right;
   margin: 1.66%;
+  border-radius: 30%;
+  transition: background 0.6s;
+  --webkit-transition: background 0.6s;
 }
 
 #container {
   max-width: 600px;
-  margin: 0 auto;
+  margin: 20px auto;
 }
 
+#colorDisplay {
+  font-size: 200%;
+}
+
+#message {
+  display: inline-block;
+  width: 20%;
+}
 #stripe {
   background: white;
   height: 30px;
@@ -26,7 +46,24 @@ h1 {
   color: black;
 }
 
-
 .selected {
-  background:blue;
+  background: steelblue;
+  color: white;
+}
+
+button {
+  border: none;
+  background: none;
+  text-transform: uppercase;
+  height: 100%;
+  font-weight: 700;
+  color: steelblue;
+  letter-spacing: 2px;
+  font-size: inherit;
+  transition: all 0.3s;
+}
+
+button:hover {
+  color: white;
+  background: steelblue;
 }
